--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:base"
   ],
+  "ignoreDeps": ["net.minecraftforge.gradle:ForgeGradle"],
   "packageRules": [
     {
       "commitMessagePrefix": "chore(ci):",
