--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,3 @@
-public net.minecraft.client.entity.player.AbstractClientPlayerEntity field_175157_a #playerInfo
-public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a #playerTextures
-public net.minecraft.client.network.play.NetworkPlayerInfo field_178863_g #skinType
+public net.minecraft.client.player.AbstractClientPlayer f_108546_ #playerInfo
+public net.minecraft.client.multiplayer.PlayerInfo f_105299_ #playerTextures
+public net.minecraft.client.multiplayer.PlayerInfo f_105303_ #skinType
