--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,11 +1,3 @@
-import org.apache.http.HttpEntity
-import org.apache.http.client.methods.CloseableHttpResponse
-import org.apache.http.client.methods.HttpPost
-import org.apache.http.entity.ContentType
-import org.apache.http.entity.mime.MultipartEntityBuilder
-import org.apache.http.impl.client.CloseableHttpClient
-import org.apache.http.impl.client.HttpClients
-
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
@@ -16,7 +8,6 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
-        classpath "org.apache.httpcomponents:httpmime:4.5.13"
     }
 }
 plugins {
@@ -30,6 +21,9 @@ apply plugin: 'eclipse'
 
 // May be able to remove it
 apply plugin: "org.spongepowered.mixin"
+
+// Needs to be applied after plugins so it knows what (jar) is
+apply from: '../discord.gradle'
 
 def branch = System.getenv("GITHUB_REF")
 if(branch != null) {
@@ -214,46 +208,6 @@ task deobfJar(type: Jar) {
     from file("LICENSE")
 }
 
-/** For pre-releases and testers to be able to try the latest commits if they want.
- * If the builds start exceeding 8MB then we may want to upload to s3 instead and periodically clear.
- * TODO possibly add a task that announces when builds are made?
- * Though add a note that it may take a while for Curse to approve the files.
- */
-task discordupload {
-    dependsOn(jar)
-    doLast {
-        String discordWebhook = System.getenv("DISCORD_WEBHOOK")
-
-        if(discordWebhook != null) {
-            println("Logging Into Discord")
-
-            CloseableHttpClient httpClient = HttpClients.createDefault()
-            HttpPost uploadFile = new HttpPost(discordWebhook)
-
-            MultipartEntityBuilder builder = MultipartEntityBuilder.create()
-            if(isCanary) {
-                builder.addTextBody("content", "New canary Build")
-            } else {
-                builder.addTextBody("content", "New release build\n\n" +
-                        "Current Features: <${project.github}/blob/${branch}/CHANGELOG.md>")
-            }
-
-            builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jar.archiveName)
-
-            HttpEntity multipart = builder.build()
-
-            uploadFile.setEntity(multipart)
-            CloseableHttpResponse response = httpClient.execute(uploadFile)
-            response.getEntity()
-
-            println("Posted build")
-
-        } else {
-            println("Discord webhook unspecified")
-        }
-    }
-}
-
 tasks.curseforge.enabled = System.getenv("CURSE_API") != null
 
 curseforge {
@@ -281,6 +235,11 @@ task publish {
     doLast {
         println "This is a dummy task to run others for version: ${version}"
     }
+}
+
+ext {
+
+    getGitChangelog = this.&getGitChangelog
 }
 
 task cleanbuildfolder {
