--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
 archivesBaseName = "${project.archive}-fabric"
 group = project.package
 
-minecraft {
+loom {
 }
 
 repositories {
@@ -49,14 +49,12 @@ dependencies {
 	minecraft "com.mojang:minecraft:1.17.1"
 	mappings minecraft.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:0.11.6"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.37.1+1.17"
 
 	modImplementation "com.terraformersmc:modmenu:2.0.5"
 
 	include "me.shedaniel.cloth:cloth-config-fabric:5.0.38"
 	modImplementation "me.shedaniel.cloth:cloth-config-fabric:5.0.38"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.37.1+1.17"
 
 	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:3.1.1"
 	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:3.1.1"
