feat: Separate some resources to be common across fabric and forge

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -23,6 +23,14 @@ group = project.package
 loom {
 }
 
+sourceSets {
+	main {
+		resources {
+			srcDirs "../core/src/main/resources"
+		}
+	}
+}
+
 repositories {
 	maven {
 		name = "FabricMC"
