--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -128,7 +128,13 @@ minecraft {
     }
 }
 
-sourceSets.main.resources { srcDir 'src/generated/resources' }
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/generated/resources", "../core/src/main/resources"
+        }
+    }
+}
 
 configurations {
     annotationProcessor.extendsFrom minecraft
