refector: Moving network packets

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -10,7 +10,7 @@ def branch = System.getenv("GITHUB_REF")
 if(branch != null) {
 	branch = branch.replace('refs/heads/', '')
 }
-if(branch != null) {
+if(branch == null) {
 	branch = "master"
 }
 def isCanary = version.toString().contains('canary')
