--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -146,6 +146,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.17.1-37.0.34'
 
+    implementation 'org.spongepowered:mixin:0.8.4'
+    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
+
     implementation project(":core")
 
     //compile "com.sekwah:SekCLib:${sekclib_version}:deobf"
@@ -172,10 +175,9 @@ dependencies {
 
 }
 
-// these currently don't work. Re-enable them when forge is shipping with them again.
-/*mixin {
+mixin {
     add sourceSets.main, "mixins.${project.modid}.refmap.json"
-}*/
+}
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
