chore(ci): Fix branch reference

--- a/discord.gradle
+++ b/discord.gradle
@@ -39,7 +39,7 @@ task discordupload {
                 builder.addTextBody("content", "New canary Build")
             } else {
                 builder.addTextBody("content", "New release build\n\n" +
-                        "Current Features: <${project.github}/blob/${branch}/CHANGELOG.md>")
+                        "Current Features: <${project.github}/blob/master/CHANGELOG.md>")
             }
 
             builder.addBinaryBody("file", file(jarTask.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jarTask.archiveName)
