feat(forge): Update to 1.18

--- a/build.gradle
+++ b/build.gradle
@@ -62,10 +62,11 @@ task cleanbuildfolder {
 task build {
     doLast {
         println "Copy all files for release plugin."
-        copy {
+        // TODO Un-comment when fabric is supported again
+        /*copy {
             from "${rootDir}/fabric/build/libs"
             into "${rootDir}/build/libs"
-        }
+        }*/
         copy {
             from "${rootDir}/forge/build/libs"
             into "${rootDir}/build/libs"
