feat: Update fabric to 1.18

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,5 @@ pluginManagement {
 rootProject.name = "Re-Skin"
 
 include 'core'
-// TODO Ignore fabric until all deps are updates
-//include 'fabric'
+include 'fabric'
 include 'forge'
