--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
-	id "com.matthewprenger.cursegradle" version "1.4.0"
+    id 'fabric-loom' version '0.10-SNAPSHOT'
+    id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
 // Needs to be applied after plugins so it knows what (jar) is
@@ -8,10 +8,10 @@ apply from: '../discord.gradle'
 
 def branch = System.getenv("GITHUB_REF")
 if(branch != null) {
-	branch = branch.replace('refs/heads/', '')
+    branch = branch.replace('refs/heads/', '')
 }
 if(branch == null) {
-	branch = "master"
+    branch = "master"
 }
 def isCanary = version.toString().contains('canary')
 
@@ -24,107 +24,108 @@ loom {
 }
 
 sourceSets {
-	main {
-		java {
-			srcDir "../core/src/main/java"
-		}
-		resources {
-			srcDirs "../core/src/main/resources"
-		}
-	}
+    main {
+        java {
+            srcDir "../core/src/main/java"
+        }
+        resources {
+            srcDirs "../core/src/main/resources"
+        }
+    }
 }
 
 repositories {
-	maven {
-		name = "FabricMC"
-		url = "https://maven.fabricmc.net"
-	}
-	maven { url "https://maven.shedaniel.me/" }
-	maven {
-		name = "Terrafromer MC"
-		url = "https://maven.terraformersmc.com/releases"
-	}
-	maven {
-		name = 'Ladysnake Mods'
-		url = 'https://ladysnake.jfrog.io/artifactory/mods'
-	}
+    maven {
+        name = "FabricMC"
+        url = "https://maven.fabricmc.net"
+    }
+    maven { url "https://maven.shedaniel.me/" }
+    maven {
+        name = "Terrafromer MC"
+        url = "https://maven.terraformersmc.com/releases"
+    }
+    maven {
+        name = 'Ladysnake Mods'
+        url = 'https://ladysnake.jfrog.io/artifactory/mods'
+    }
 }
 
 processResources {
-	inputs.property "version", project.version
+    inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 // Stops trying to resolve forge dependencies while doing fabric
 configurations {
-	all {
-		exclude group: "net.minecraftforge"
-	}
+    all {
+        exclude group: "net.minecraftforge"
+    }
 }
 
 dependencies {
-	//to change the versions see the gradle.properties file
-	mappings minecraft.officialMojangMappings()
-	modImplementation "net.fabricmc:fabric-loader:0.11.6"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.43.1+1.18"
+    //to change the versions see the gradle.properties file
+    minecraft "com.mojang:minecraft:1.18"
+    mappings minecraft.officialMojangMappings()
+    modImplementation "net.fabricmc:fabric-loader:0.11.6"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.43.1+1.18"
 
-	implementation project(":core")
+    implementation project(":core")
 
-	modImplementation "com.terraformersmc:modmenu:3.0.0"
+    modImplementation "com.terraformersmc:modmenu:3.0.0"
 
-	include "me.shedaniel.cloth:cloth-config-fabric:6.0.45"
-	modImplementation "me.shedaniel.cloth:cloth-config-fabric:6.0.45"
+    include "me.shedaniel.cloth:cloth-config-fabric:6.0.45"
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:6.0.45"
 
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:3.1.1"
-	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:3.1.1"
+    modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:4.0.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:4.0.0"
 
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:3.1.1"
-	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:3.1.1"
+    modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:4.0.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:4.0.0"
 }
 
 
 tasks.curseforge.enabled = System.getenv("CURSE_API") != null
 
 curseforge {
-	logger.info("Curse api: " + System.getenv("CURSE_API"))
-	if (System.getenv("CURSE_API") != null) {
-		apiKey = System.getenv("CURSE_API")
-	}
-	project {
-		id = project.curse_project_id
-		// TODO add code to reference this but also cut the latest change logs in for the files
-		changelog = "${project.github}/blob/master/CHANGELOG.md"
-		changelogType = 'markdown'
-		releaseType = 'release'
-		addGameVersion 'Fabric'
-		addGameVersion '1.18'
-		relations {
-			requiredDependency "fabric-api"
-		}
+    logger.info("Curse api: " + System.getenv("CURSE_API"))
+    if (System.getenv("CURSE_API") != null) {
+        apiKey = System.getenv("CURSE_API")
+    }
+    project {
+        id = project.curse_project_id
+        // TODO add code to reference this but also cut the latest change logs in for the files
+        changelog = "${project.github}/blob/master/CHANGELOG.md"
+        changelogType = 'markdown'
+        releaseType = 'release'
+        addGameVersion 'Fabric'
+        addGameVersion '1.18'
+        relations {
+            requiredDependency "fabric-api"
+        }
 
-		mainArtifact remapJar
-		addArtifact jar
-	}
+        mainArtifact remapJar
+        addArtifact jar
+    }
 
-	options {
-		forgeGradleIntegration = false
-	}
+    options {
+        forgeGradleIntegration = false
+    }
 }
 
 task publish {
-	doLast {
-		println "This is a dummy task to run others for version: ${version}"
-	}
+    doLast {
+        println "This is a dummy task to run others for version: ${version}"
+    }
 }
 
 task cleanbuildfolder {
-	doLast {
-		println "Cleaning up previous builds (to stop publishing old ones by mistake)"
-		project.delete(files("${buildDir}/libs"))
-	}
+    doLast {
+        println "Cleaning up previous builds (to stop publishing old ones by mistake)"
+        project.delete(files("${buildDir}/libs"))
+    }
 }
 
 compileJava.dependsOn 'cleanbuildfolder'
@@ -134,5 +135,5 @@ compileJava.dependsOn 'cleanbuildfolder'
 publish.dependsOn 'build'
 publish.finalizedBy 'discordupload'
 if (!isCanary) {
-	publish.finalizedBy 'curseforge'
+    publish.finalizedBy 'curseforge'
 }
