refactor: preparing repo to switch over to using sekclib

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,10 +15,10 @@ jobs:
           token: ${{ secrets.PAT }}
           # See how to configure file https://github.com/googleapis/release-please/blob/main/docs/manifest-releaser.md
       # See output info at https://github.com/google-github-actions/release-please-action#configuration for variables
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
       - name: Cache Gradle packages
-        uses: actions/cache@v3
+        uses: actions/cache@v2
         if: ${{ steps.release.outputs.release_created }}
         with:
           path: ~/.gradle/caches
@@ -26,10 +26,16 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Set up JDK 17
         if: ${{ steps.release.outputs.release_created }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
           java-version: 17
+      - name: Download MC assets
+        if: ${{ steps.release.outputs.release_created }}
+        run: ./gradlew downloadAssets || ./gradlew downloadAssets || (sleep 30s && ./gradlew downloadAssets)
+      - name: Run DataGen
+        if: ${{ steps.release.outputs.release_created }}
+        run: ./gradlew runData
       - name: Build and publish (release)
         if: ${{ steps.release.outputs.release_created }}
         env:
