--- a/discord.gradle
+++ b/discord.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+
+
+def isRelease = System.getenv("IS_RELEASE") == "true"
+
 /** For pre-releases and testers to be able to try the latest commits if they want.
  * If the builds start exceeding 8MB then we may want to upload to s3 instead and periodically clear.
  * TODO possibly add a task that announces when builds are made?
@@ -35,7 +39,8 @@ task discordupload {
             HttpPost uploadFile = new HttpPost(discordWebhook)
 
             MultipartEntityBuilder builder = MultipartEntityBuilder.create()
-            if(version.toString().contains('canary')) {
+
+            if(!isRelease) {
                 builder.addTextBody("content", "New canary Build")
             } else {
                 builder.addTextBody("content", "New release build\n\n" +
