--- a/build.gradle
+++ b/build.gradle
@@ -74,8 +74,8 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    //mappings channel: 'official', version: '1.18.1'
-    mappings channel: 'parchment', version: '2021.12.19-1.18.1'
+    mappings channel: 'official', version: '1.19.3'
+    //mappings channel: 'parchment', version: '2021.12.19-1.18.1'
     //mappings channel: 'parchment', version: '2021.07.21-1.17'
 
     // This is for personal local tests i was doing ignore it ;)
@@ -155,12 +155,12 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.2-40.0.24'
+    minecraft 'net.minecraftforge:forge:1.19.3-44.1.5'
 
     implementation 'org.spongepowered:mixin:0.8.5'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    implementation fg.deobf("com.sekwah:SekCLib:0.2.0")
+    implementation fg.deobf("com.sekwah:SekCLib:0.4.3")
     // Trick intellij to allow for better editing in here for the discord task
     // compile "org.apache.httpcomponents:httpmime:4.5.13"
     //implementation fg.deobf("curse.maven:torohealth-damage-indicators-245733:3556931")
@@ -229,12 +229,6 @@ task deobfJar(type: Jar) {
     from sourceSets.main.output
     classifier = 'deobf'
     from file("LICENSE")
-}
-configurations.all {
-    resolutionStrategy.dependencySubstitution {
-        // For more info see https://medium.com/@jonastm/jdk-17-with-dcevm-and-hotswapagent-4fee7095617a on how to enable for java 17
-        substitute module('cpw.mods:securejarhandler') using module('cpw.mods:securejarhandler:0.9.+') because "Fixes support for DCEVM"
-    }
 }
 
 publishing {
@@ -308,7 +302,7 @@ curseforge {
         changelog = "${project.github}/blob/${branch}/CHANGELOG.md"
         changelogType = 'markdown'
         releaseType = 'beta'
-        addGameVersion '1.18.2'
+        addGameVersion '1.19.3'
 
         relations {
             requiredDependency 'sekclib'
