--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[40,)"
+loaderVersion="[42,)"
 issueTrackerURL="https://github.com/sekwah41/Re-Skin/issues"
 license="All rights reserved"
 [[mods]] #mandatory
@@ -17,7 +17,7 @@ license="All rights reserved"
 [[dependencies.reskin]]
     modId="forge"
     mandatory=true
-    versionRange="[40,)"
+    versionRange="[42,)"
     ordering="NONE"
     side="BOTH"
 
@@ -25,6 +25,13 @@ license="All rights reserved"
 [[dependencies.reskin]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.18.2,)"
+    versionRange="[1.19.3,)"
+    ordering="NONE"
+    side="BOTH"
+
+[[dependencies.reskin]]
+    modId="sekclib"
+    mandatory=true
+    versionRange="[0.4.3,)"
     ordering="NONE"
     side="BOTH"
