--- a/build.gradle
+++ b/build.gradle
@@ -301,7 +301,10 @@ curseforge {
         // TODO add code to reference this but also cut the latest change logs in for the files
         changelog = "${project.github}/blob/${branch}/CHANGELOG.md"
         changelogType = 'markdown'
-        releaseType = 'beta'
+        releaseType = 'release'
+        addGameVersion '1.19'
+        addGameVersion '1.19.1'
+        addGameVersion '1.19.2'
         addGameVersion '1.19.3'
 
         relations {
