--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,4 +1,5 @@
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -6,6 +7,9 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      upload_url: ${{ steps.release.outputs.upload_url }}
     # https://github.com/google-github-actions/release-please-action in case more config is needed
     steps:
       - uses: google-github-actions/release-please-action@v3
@@ -15,33 +19,38 @@ jobs:
           token: ${{ secrets.PAT }}
           # See how to configure file https://github.com/googleapis/release-please/blob/main/docs/manifest-releaser.md
       # See output info at https://github.com/google-github-actions/release-please-action#configuration for variables
+
+# Possibly optimise this by building and then passing the folder across to these stages
+  release:
+    strategy:
+      matrix:
+        release-task: [curseforge, discordupload, modrinth]
+    needs: release-please
+    runs-on: ubuntu-latest
+    if: ${{ needs.release-please.outputs.release_created }}
+    steps:
       - uses: actions/checkout@v3
-        if: ${{ steps.release.outputs.release_created }}
       - name: Cache Gradle packages
         uses: actions/cache@v3
-        if: ${{ steps.release.outputs.release_created }}
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Set up JDK 17
-        if: ${{ steps.release.outputs.release_created }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: 17
       - name: Download MC assets
-        if: ${{ steps.release.outputs.release_created }}
         run: ./gradlew downloadAssets || ./gradlew downloadAssets || (sleep 30s && ./gradlew downloadAssets)
       - name: Run DataGen
-        if: ${{ steps.release.outputs.release_created }}
         run: ./gradlew runData
       - name: Build and publish (release)
-        if: ${{ steps.release.outputs.release_created }}
         env:
           CURSE_API: ${{ secrets.CURSE_API }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          IS_RELEASE: ${{ steps.release.outputs.release_created }}
+          IS_RELEASE: true
         run: |
           # Build
-          ./gradlew build discordupload curseforge
+          ./gradlew build ${{ matrix.task }}
+
