chore: fix reference to matrix value in release

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -52,5 +52,5 @@ jobs:
           IS_RELEASE: true
         run: |
           # Build
-          ./gradlew build ${{ matrix.task }}
+          ./gradlew build ${{ matrix.release-task }}
 
