--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,6 +23,7 @@ jobs:
 # Possibly optimise this by building and then passing the folder across to these stages
   release:
     strategy:
+      fail-fast: false
       matrix:
         release-task: [curseforge, discordupload, modrinth]
     needs: release-please
@@ -49,6 +50,7 @@ jobs:
         env:
           CURSE_API: ${{ secrets.CURSE_API }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
           IS_RELEASE: true
         run: |
           # Build
