feat: update to 1.20
BREAKING CHANGE: dropped 1.19 support

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version=2.5.0
-
 title=Re:Skin
 archive=ReSkin
+# This is just for the jar outputs
+mc_version=-1.20
 modid=reskin
 package=com.sekwah
 vendor=Sekwah
