--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath(group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true) { exclude group: 'org.apache.logging.log4j' }
         classpath "org.spongepowered:mixingradle:0.7+"
         classpath "org.apache.httpcomponents:httpmime:4.5.13"
         classpath "org.parchmentmc:librarian:1.+"
@@ -75,7 +75,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.19.3'
+    mappings channel: 'official', version: '1.20.1'
     //mappings channel: 'parchment', version: '2021.12.19-1.18.1'
     //mappings channel: 'parchment', version: '2021.07.21-1.17'
 
@@ -130,7 +130,6 @@ minecraft {
         data {
             workingDirectory project.file('run')
 
-            forceExit false
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', ''
             //property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -156,12 +155,12 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.3-44.1.5'
+    minecraft 'net.minecraftforge:forge:1.20.1-47.0.14'
 
     implementation 'org.spongepowered:mixin:0.8.5'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    implementation fg.deobf("com.sekwah:SekCLib:0.4.3")
+    implementation fg.deobf("com.sekwah:SekCLib:1.0.0")
     // Trick intellij to allow for better editing in here for the discord task
     // compile "org.apache.httpcomponents:httpmime:4.5.13"
     //implementation fg.deobf("curse.maven:torohealth-damage-indicators-245733:3556931")
@@ -194,7 +193,7 @@ mixin {
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     finalizedBy 'reobfJar'
-    classifier = 'universal'
+    archiveClassifier = 'universal'
     manifest {
         attributes([
                 "Specification-Title": project.modid,
@@ -206,6 +205,7 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
         ])
     }
+    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
 }
 
 // Example configuration to allow publishing using the maven-publish task
@@ -221,14 +221,16 @@ def reobfArtifact = artifacts.add('default', reobfFile) {
 task srcJar(type: Jar) {
     build.dependsOn it
     from sourceSets.main.allSource
-    classifier = 'sources'
+    archiveClassifier = 'sources'
+    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
     from file("LICENSE")
 }
 
 task deobfJar(type: Jar) {
     build.dependsOn it
     from sourceSets.main.output
-    classifier = 'deobf'
+    archiveClassifier = 'deobf'
+    setArchivesBaseName "${archivesBaseName}${project.mc_version}"
     from file("LICENSE")
 }
 
@@ -307,7 +309,6 @@ curseforge {
     }
     project {
         id = project.curse_project_id
-        // TODO add code to reference this but also cut the latest change logs in for the files
         changelog = getReleaseChangelog()
         changelogType = 'markdown'
         releaseType = 'release'
